--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
+      - uses: oven-sh/setup-bun@v1
         with:
-          node-version: 18
-      - run: npm ci
-      - run: npx cowsay "Hello, world!"
+          bun-version: latest
+      - run: bun install
+      - run: bun start
